<resources>
    <string name="app_name">NewMedia</string>
    <string name="nmedia">NMedia</string>
    <string name="post_avatar">Post avatar</string>
    <string name="menu_icon">Menu icon</string>
    <string name="like_icon">like icon</string>
    <string name="share_icon">Share icon</string>
    <string name="views_screen">Views screen</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="empty_content">Content can\'t be empty</string>
    <string name="edit_text">Edit text</string>
    <string name="cancel_button">Cancel button</string>
    <string name="edit_arrow">Edit arrow</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="random_image">random image</string>
    <string name="text_here">Text here</string>
    <string name="google_api_unavailable">Google api unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s created new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="default_notification">You have received a new notification</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="new_posts">New posts</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>